# instant-python-ddd

./: .buildinfo  Makefile  README.md  contributing.html  cookiecutter.json  genindex.html  pyproject.toml  searchindex.js
docs/: about.html  contributing.html  customization.html  genindex.html  index.html  objects.inv  requirements.html  search.html  (+2 more)
domain_driven_design/{{cookiecutter.project_slug}}/: Makefile  pyproject.toml
domain_driven_design/{{cookiecutter.project_slug}}/.github/workflows/: app.yml
domain_driven_design/{{cookiecutter.project_slug}}/scripts/: add-dependency.sh  insert_template.py
domain_driven_design/{{cookiecutter.project_slug}}/scripts/templates/: domain_event_json_deserializer_template.py  domain_event_json_serializer_template.py  domain_event_template.py  event_bus_template.py  rabbit_mq_configurer_template.py  rabbit_mq_connection_template.py
domain_driven_design/{{cookiecutter.project_slug}}/scripts/templates/events/: domain_event_subscriber_template.py  exchange_type_template.py  rabbit_mq_event_bus_template.py  rabbit_mq_settings_template.py
domain_driven_design/{{cookiecutter.project_slug}}/scripts/templates/exceptions/: invalid_negative_value_error_template.py
domain_driven_design/{{cookiecutter.project_slug}}/scripts/tests/: integration.sh  unit.sh
domain_driven_design/{{cookiecutter.project_slug}}/src/contexts/shared/domain/value_objects/: int_value_object.py
domain_driven_design/{{cookiecutter.project_slug}}/tests/contexts/{{cookiecutter.bounded_context_name}}/{{cookiecutter.aggregate_name}}/domain/: test_domain.py
(+33 files in other folders)
