[project]
name = "python-template"
version = "0.1.0"
description = "Python template for projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = [
    "coverage>=7.6.9",
    "doublex>=1.9.6.1",
    "doublex-expects>=0.7.1",
    "expects>=0.9.0",
    "pytest>=8.3.4",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.6.1",
]
lint = [
    "mypy>=1.13.0",
    "ruff>=0.8.3",
    "yapf>=0.43.0",
]
